--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Broadway Design</h1>
-    <nav>
+    <div class="background">
+      <h1>Broadway Design</h1>
+      <nav>
         <p>Home</p>
         <p>Process</p>
         <p>Work</p>
         <p>Team</p>
         <p>Contact</p>
-    </nav>
+      </nav>
+    </div>
+    <div class="our process">
+
+    </div>
+    <div class="ds in NY">
+
+    </div>
+    <div class="PTC">
+
+    </div>
+    <div class="footer">
+
+    </div>
+
   </body>
 </html>
