--- a/index.html
+++ b/index.html
@@ -35,9 +35,26 @@
       </div>
     </div>
     <div class="ds in NY">
-
+      <h2>Designed in New York</h2>
     </div>
     <div class="PTC">
+      <div class="portfolio">
+        <h3>Portfolio</h3>
+        <p>Coming Soon</p>
+
+      </div>
+      <div class="team">
+        <h3>Team</h3>
+        <p>We're Hiring!</p>
+
+      </div>
+      <div class="contact">
+        <h3>Contact</h3>
+        <p>Phone: (555)-555-5555</p>
+        <p>E-mail: test@example.com</p>
+        <p>Twitter: @test</p>
+
+      </div>
 
     </div>
     <div class="footer">
