--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="background">
+    <div class="background" id="home">
       <h1>Broadway Design</h1>
       <nav>
-        <p>Home</p>
-        <p>Process</p>
-        <p>Work</p>
-        <p>Team</p>
-        <p>Contact</p>
+        <a href="#home">Home</a><br>
+        <a href="#process">Process</a><br>
+        <a href="#work">Work</a><br>
+        <a href="#team">Team</a><br>
+        <a href="#contact">Contact</a>
       </nav>
     </div>
-    <div class="our process">
+    <div class="our process" id="process">
       <h2>Our Process</h2>
       <div class="identify">
           <img src="./resources/images/identify.svg">
@@ -34,21 +34,21 @@
 
       </div>
     </div>
-    <div class="ds in NY">
+    <div class="background">
       <h2>Designed in New York</h2>
     </div>
     <div class="PTC">
-      <div class="portfolio">
+      <div class="portfolio" id="work">
         <h3>Portfolio</h3>
         <p>Coming Soon</p>
 
       </div>
-      <div class="team">
+      <div class="team" id="team">
         <h3>Team</h3>
         <p>We're Hiring!</p>
 
       </div>
-      <div class="contact">
+      <div class="contact" id="contact">
         <h3>Contact</h3>
         <p>Phone: (555)-555-5555</p>
         <p>E-mail: test@example.com</p>
@@ -57,8 +57,13 @@
       </div>
 
     </div>
-    <div class="footer">
-      <p>© Broadway 2017 Home About Work Team Contact</p>
+    <div class="background">
+      <p>© Broadway 2017</p>
+      <a href="#home">Home</a>
+      <a href="#process">About</a>
+      <a href="#work">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
 
 
     </div>
