--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
 
     </div>
-    <div class="background">
+    <div class="footer">
       <p>© Broadway 2017</p>
       <a href="#home">Home</a>
       <a href="#process">About</a>
