--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </div>
     <div class="our process" id="process">
       <h2>Our Process</h2>
-      <div class="identify">
+      <div class="element">
           <img src="./resources/images/identify.svg">
           <h3>Identify</h3>
           <p>We focus on the most important details.</p>
       </div>
-      <div class="understand">
+      <div class="element">
         <img src="./resources/images/understand.svg" alt="">
         <h3>Understand</h3>
         <p>We study our projects inside and out.</p>
       </div>
-      <div class="execute">
+      <div class="element">
         <img src="./resources/images/execute.svg" alt="">
         <h3>Execute</h3>
         <p>We put everything we have into our work.</p>
