correction of html and style in portfolio, team and contact section

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
       <h2>Designed in New York</h2>
     </div>
     <div class="PTC">
-      <div class="portfolio" id="work">
+      <div class="element" id="work">
         <h3>Portfolio</h3>
         <p>Coming Soon</p>
 
       </div>
-      <div class="team" id="team">
+      <div class="element" id="team">
         <h3>Team</h3>
         <p>We're Hiring!</p>
 
       </div>
-      <div class="contact" id="contact">
+      <div class="element" id="contact">
         <h3>Contact</h3>
         <p>Phone: (555)-555-5555</p>
         <p>E-mail: test@example.com</p>
